--- a/force-app/main/default/classes/MoviePhotosListController.cls
+++ b/force-app/main/default/classes/MoviePhotosListController.cls
@@ -41,7 +41,7 @@ public with sharing class MoviePhotosListController {
     
     @AuraEnabled
     public static Boolean arePhotosAvailable() { 
-        return getLatestPhotos().size() == MINIMUM_NUMBER_OF_PHOTOS;
+        return getLatestPhotos().size().equals(MINIMUM_NUMBER_OF_PHOTOS);
     }
     
     @AuraEnabled
