--- a/force-app/main/default/classes/RequiringActionRecordsController.cls
+++ b/force-app/main/default/classes/RequiringActionRecordsController.cls
@@ -39,7 +39,7 @@ public with sharing class RequiringActionRecordsController {
         ];
         
         for (Group queue : queues) {
-            if (queue.Name == Constants.APPROVERS_QUEUE) {
+            if (queue.Name.equals(Constants.APPROVERS_QUEUE)) {
                 return true;
             }
         }
